--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-PYTHON_SERVICE_URL=http://localhost:5001/extract
+PYTHON_SERVICE_URL=https://python-service-dkxc.onrender.com
 GEOCODE_API_KEY=5cf9fd7d0e8741feab63854f9e8727b2
 OPENCAGE_API_KEY=5cf9fd7d0e8741feab63854f9e8727b2
 
